manifests/gogs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: git.kahkhang.me
      http:
        paths:
          - backend:
              serviceName: gogs-gogs
              servicePort: 80
